update to almost finish